--- a/Proy1/web/css/cliente.css
+++ b/Proy1/web/css/cliente.css
@@ -4,11 +4,9 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 10/03/2020, 11:38:33 PM
-    Author     : sebas
-    Author     : the other guy did better
+    Created on : 19-abr-2020, 15:44:31
+    Author     : Grelvin
 */
-
 
 *{
     margin: 0px;
@@ -63,8 +61,7 @@ nav{
 }
 
 .btn{
-    /*border: 1px solid #3498db;*/
-    border: 1px solid #1a4b6c;
+    border: 1px solid #d91e18;
     border-radius: 3px;
     background: none;
     padding: 10px 20px;
@@ -82,8 +79,7 @@ nav{
 }
 
 .btn1:hover {
-    /*color: #3498db;*/
-    color: #1a4b6c;
+    color: #d91e18;
 }
 
 .btn::before {
@@ -92,8 +88,7 @@ nav{
     left: 0;
     width: 100%;
     height: 0%;
-    /*background: #3498db;*/
-    background: #1a4b6c;
+    background: #d91e18;
     z-index: -1;
     transition: 0.8s;
 } 
@@ -136,7 +131,6 @@ main{
 }
 
 .seccion-servicios h1 strong{
-    /*color: #3498db;*/
     color: #04395e;
 }
 
@@ -149,10 +143,8 @@ main{
     width: 60px;
     height: 60px;
     margin: auto;
-    /*background: #6bb9f0;*/
     background: #857487;
     border-radius: 50%;
-    /*color: #22313f;*/
     color: #210124;
     line-height: 60px;
     font-size: 25px;
@@ -188,12 +180,10 @@ main{
 
 .owl-dot.active{
     width: 36px;
-    /*    background: #3498db !important;*/
     background: #812349 !important;
 }
 
 .owl-dot:hover{
     width: 36px;
-    /*background: #3498db !important;*/
     background: #812349 !important;
 }
