--- a/Proy1/web/css/admincss.css
+++ b/Proy1/web/css/admincss.css
@@ -1,172 +1,179 @@
 *{
-    margin:0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
-body{
-    background: #0b2027;
-    font-family: 'Roboto', sans-serif;
-    line-height: 18px;
+body {
+    font-family: "Poppins", sans-serif;
 }
 
-a{
+header{
+    display: flex;
+    width: 80%;
+    height: 10vh;
+    margin: auto;
+    align-items: center;
+}
+
+.logo-container, .nav-links, .registro{
+    display: flex;
+}
+
+.logo-container{
+    flex: 1;
+}
+
+.logo{
+    font-weight: 400;
+    font-size: 30px;
+    margin: 5px;
+}
+
+nav{
+    flex: 2;
+}
+
+.nav-links{
+    justify-content: space-around;
+    list-style: none; 
+}
+
+.nav-link{
+    color: #5f5f79;
+    font-size: 18px;
     text-decoration: none;
-    color: #fff;
 }
 
-p{
-    color: #fff;
+.registro{
+    flex: 1;
+    justify-content: flex-end;
 }
 
-.btn-menu{
-    display: block;
-    padding: 20px;
-    background: #0d2c44;
-    color: #fff;
-
-}
-
-.btn-menu .icono{
-    float: right;
-}
-
-.contenedor{
-    width: 20%;
-    min-width: 300px;
-    margin: 50px;
-    display: inline-block;
-    font-family: 'Roboto', sans-serif;
-    line-height: 18px;
-}
-
-.contenedor .menu{
-    width: 100%;
-}
-
-.contenedor ul{
-    list-style: none;
-}
-
-.contenedor .menu li a{
-    color:#494949;
-    display:block;
-    padding: 15px 20px;
-    background: #e9e9e9;
-}
-
-.contenedor .menu li a:hover{
-    background: #1a95d5;
-    color: #fff;
-}
-
-.contenedor .menu .icono{
-    font-size: 12px;
-    line-height: 18px;
-}
-
-.contenedor .menu .icono.izquierda{
-    float: left;
-    margin-right: 20px;
-}
-
-.contenedor .menu .icono.derecha{
-    float: right;
-    margin-left: 10px;
-}
-
-.contenedor .menu ul{
-    display: none;
-}
-
-.contenedor .menu ul li a{
-    background: #424242;
-    color: #e9e9e9;
-}
-
-.contenedor .menu .activado > a{
-    background: #1a95d5;
-    color: #fff;
-}
-
-.imagen-gb{
-    background: url(./imagenes/bg1.png);
-    -webkit-background-size: cover;
-    background-size: cover;  
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 100%;
-    filter: blur(6px);
-}
-
-.box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 400px;
-    padding: 40px;
-    background: rgba(0,0,0,.8);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
-    border-radius: 10px;
-}
-
-.box h2{
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-}
-
-.box .inputBox{
-    position: relative;
-}
-
-.box .inputBox input{
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    letter-spacing: 1px;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-
-}
-
-.box .inputBox label{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.box .inputBox input:focus ~label,
-.box .inputBox input:valid ~label{
-    top: -18px;
-    left: 0;
-    color: #03a9f4;
-    font-size: 12px;
-}
-
-.box input[type= "submit"]{
-    background: transparent;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    color: #fff;
-    background: #03a9f4;
+.btn{
+    border: 1px solid #d91e18;
+    border-radius: 3px;
+    background: none;
     padding: 10px 20px;
+    font-size: 15px;
+    font-family: "montserrat";
     cursor: pointer;
-    border-spacing: 5px;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+}
+
+.btn1{
+    color: #fff;
+}
+
+.btn1:hover {
+    color: #d91e18;
+}
+
+.btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #d91e18;
+    z-index: -1;
+    transition: 0.8s;
+} 
+
+.btn1::before{
+    top: 0;
+    border-radius: 0 0 50% 50%;
+}
+
+.btn1::before{
+    height: 180%;
+}
+
+.btn1:hover::before{
+    height: 0%;
+}
+
+main{
+    background: #e2e8de;
+    min-height: 100vh;
+    display: none;
+    align-items: center;
+}
+
+.seccion-servicios{
+    width: 100%;
+}
+
+.inner-wigth{
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;     
+}
+
+.seccion-servicios h1{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 80px;
+}
+
+.seccion-servicios h1 strong{
+    color: #04395e;
+}
+
+.servicio{
+    text-align: center;
+    margin: 20px 0;
+}
+
+.servicio-icon{
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    background: #857487;
+    border-radius: 50%;
+    color: #210124;
+    line-height: 60px;
+    font-size: 25px;
+}
+
+.servicio-name{
+    font-weight: 600;
+    font-size: 18px;
+    margin: 20px 0;
+}
+
+.servicio-desc{
+    max-width: 400px;
+    margin: auto;
+    color: #333;
+    font-size: 17px;
+}
+
+.owl-dots{
+    text-align: center;
+    margin-top: 40px;
+}
+
+.owl-dot{
+    width: 14px;
+    height: 14px;
+    background: #808080 !important;
+    margin: 0 6px;
+    border-radius: 14px;
+    outline: none;
+    transition: .3s linear;
+}
+
+.owl-dot.active{
+    width: 36px;
+    background: #812349 !important;
+}
+
+.owl-dot:hover{
+    width: 36px;
+    background: #812349 !important;
 }
