--- a/Proy1/web/css/cliente_1.css
+++ b/Proy1/web/css/cliente_1.css
@@ -1,3 +1,13 @@
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 19-abr-2020, 15:44:31
+    Author     : Grelvin
+*/
+
 *{
     margin: 0px;
     padding: 0px;
@@ -99,11 +109,11 @@ nav{
 main{
     background: #e2e8de;
     min-height: 100vh;
-    display: none;
+    display: flex;
     align-items: center;
 }
 
-.info-cliente{
+.seccion-servicios{
     width: 100%;
 }
 
@@ -113,8 +123,68 @@ main{
     padding: 0 20px;     
 }
 
+.seccion-servicios h1{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 80px;
+}
 
+.seccion-servicios h1 strong{
+    color: #04395e;
+}
 
+.servicio{
+    text-align: center;
+    margin: 20px 0;
+}
 
+.servicio-icon{
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    background: #857487;
+    border-radius: 50%;
+    color: #210124;
+    line-height: 60px;
+    font-size: 25px;
+}
 
+.servicio-name{
+    font-weight: 600;
+    font-size: 18px;
+    margin: 20px 0;
+}
+
+.servicio-desc{
+    max-width: 400px;
+    margin: auto;
+    color: #333;
+    font-size: 17px;
+}
+
+.owl-dots{
+    text-align: center;
+    margin-top: 40px;
+}
+
+.owl-dot{
+    width: 14px;
+    height: 14px;
+    background: #808080 !important;
+    margin: 0 6px;
+    border-radius: 14px;
+    outline: none;
+    transition: .3s linear;
+}
+
+.owl-dot.active{
+    width: 36px;
+    background: #812349 !important;
+}
+
+.owl-dot:hover{
+    width: 36px;
+    background: #812349 !important;
+}
 
