--- a/Proy1/web/css/vincular.css
+++ b/Proy1/web/css/vincular.css
@@ -1,3 +1,13 @@
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 19-abr-2020, 15:44:31
+    Author     : Grelvin
+*/
+
 *{
     margin: 0px;
     padding: 0px;
@@ -99,12 +109,23 @@ nav{
 main{
     background: #e2e8de;
     min-height: 100vh;
-    display: none;
+    display: flex;
     align-items: center;
 }
 
-.info-cliente{
+.seccion-vincular{
     width: 100%;
+}
+
+.seccion-vincular h1 {
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 500px;
+}
+
+.seccion-vincular h1 strong{
+    color: #04395e;
 }
 
 .inner-wigth{
@@ -113,8 +134,53 @@ main{
     padding: 0 20px;     
 }
 
+.vincular-form{
+    width: 85%;
+    max-width: 600px;
+    background: #f1f1f1;
+    position: absolute;
+    top: 35%;
+    left: 30%;
+    transform: translate (-30%, -30%);
+    padding: 30px 40px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+}
 
+.form-text{
+    border: 1px solid grey;
+    margin: 8px 0;
+    padding: 12px 18px;
+    border-radius: 8px;
+}
 
+.form-text label{
+    display: block;
+    text-align: left;
+    color: #333;
+    text-transform: uppercase;
+    font-size: 14px;
+}
 
+.form-text input{
+    width: 100%;
+    border: none;
+    background: none;
+    outline: none;
+    font-size: 18px;
+    margin-top: 6px;
+}
 
-
+.btn2 {
+    display: inline-block;
+    background: #674172;
+    padding: 14px 10px;
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-top: 8px;
+    width: 50%;
+    border-radius: 8px;
+}
